# job-assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ai-review.yml  ai-test-suggestions.yml  ai-test-suggestions.yml.disabled  tests.yml
apps/backend/: Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260504_0001_create_job_drafts.py  26877f091945_init_jobs_schema.py
apps/backend/app/: main.py
apps/backend/app/api/: routes_ai_extraction.py  routes_health.py  routes_job_drafts.py  routes_jobs.py  routes_raw_jobs.py
apps/backend/app/core/: config.py  job_statuses.py  status_validation.py
apps/backend/app/db/: session.py
apps/backend/app/models/: __init__.py  job.py  job_draft.py  raw_job.py
apps/backend/app/repositories/: job_draft_repository.py  job_repository.py  raw_job_repository.py
apps/backend/app/schemas/: job.py  job_draft.py  raw_job.py
apps/backend/app/services/: errors.py  job_draft_service.py  job_service.py  raw_job_service.py
apps/backend/app/services/ai/: __init__.py  ai_client.py  ai_client_factory.py  ai_extraction_pipeline.py  pipeline.py
apps/backend/app/services/ai/prompts/: job_extraction.v1.yaml  prompt_loader.py
apps/frontend/: Dockerfile  app.py  pyproject.toml
docs/: mcp-test-server.md  project_instructions_for_GPT.md  project_rules.md
docs/product/: description.md  plan.md  prd.md
docs/sprints/: Sprint_3.md  Sprint_4.md  sprint_1.md  sprint_2.md
scripts/: ai_review.py  ai_test_suggestions.py
(+33 files in other folders)
